--- a/src/app/components/side-menu/side-menu-header/side-menu-header.component.html
+++ b/src/app/components/side-menu/side-menu-header/side-menu-header.component.html
@@ -12,10 +12,10 @@
 
 <!-- Header -->
 <div class="p-4 border-b border-gray-800">
-  <div class="flex items-center justify-between">
+  <!-- <div class="flex items-center justify-between">
     <img src="https://tailwindflex.com/images/logo.svg" alt="Logo" class="h-8 w-auto">
     <span class="text-xl font-bold">Sistema Patrullaje</span>
-  </div>
+  </div> -->
 </div>
 
 <!-- Search Bar -->
