--- a/src/app/components/navbar-menu/navbar-menu-profile/navbar-menu-profile.component.html
+++ b/src/app/components/navbar-menu/navbar-menu-profile/navbar-menu-profile.component.html
@@ -2,8 +2,7 @@
 <div class="dropdown dropdown-end">
   <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
     <div class="w-10 rounded-full">
-      <img alt="Tailwind CSS Navbar component"
-        src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+      <img [src]="avatar || 'assets/img/default-avatar.png'" alt="Avatar del admin" />
     </div>
   </div>
   <ul tabindex="0" class="menu menu-sm dropdown-content text-black bg-white rounded-box z-1 mt-3 w-52 p-2 shadow">
@@ -13,12 +12,14 @@
     <!-- Perfil del usuario -->
     <li class="mb-2 border-b border-base-300 pb-2">
       <div class="flex flex-col items-start px-2">
-        <span class="font-semibold text-sm">Richard Mikhael</span>
-        <span class="text-xs text-gray-500">richard.mikhaelAemail.com</span>
+        <span class="font-semibold text-sm">{{name}}</span>
+        <span class="text-xs text-gray-500">{{email}}</span>
       </div>
     </li>
 
     @for (item of menuOptions; track item.route) {
+
+    @if (item.label !== 'Cerrar Sesión') {
     <li [routerLink]="item.route" routerLinkActive="bg-grey-200">
       <a class="justify-start items-center ">
         <img [src]="item.icon" alt="{{ item.label }} icon" class="w-5 h-5 mr-3 " />
@@ -26,7 +27,16 @@
       </a>
     </li>
     }
+    @else {
+    <li (click)="logout()">
+      <a class="justify-start items-center">
+        <img [src]="item.icon" alt="Cerrar Sesión icon" class="w-5 h-5 mr-3" />
+        Cerrar Sesión
+      </a>
+    </li>
+    }
+
+    }
 
   </ul>
 </div>
-
